@startuml er-diagram

title ER-диаграмма базы данных Guide Helper

skinparam linetype ortho

entity "users\n(auth_db)" as users {
  * **id** : UUID <<PK>>
  --
  * email : TEXT <<UNIQUE>>
  * password_hash : TEXT
    name : TEXT
    avatar_url : TEXT
  * role : TEXT [user|moderator|admin]
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
    deleted_at : TIMESTAMPTZ
}

entity "routes\n(routes_db)" as routes {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * name : TEXT
  * points : JSONB
    description : TEXT
    seasons : TEXT[]
    share_token : UUID <<UNIQUE>>
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

entity "categories" as categories {
  * **id** : UUID <<PK>>
  --
  * name : TEXT <<UNIQUE>>
  * created_at : TIMESTAMPTZ
}

entity "route_categories" as route_categories {
  * **route_id** : UUID <<FK>>
  * **category_id** : UUID <<FK>>
  --
  <<PK>> (route_id, category_id)
}

entity "comments" as comments {
  * **id** : UUID <<PK>>
  --
  * route_id : UUID <<FK>>
  * user_id : UUID
  * author_name : TEXT
  * text : TEXT
  * created_at : TIMESTAMPTZ
}

entity "route_likes" as likes {
  * **id** : UUID <<PK>>
  --
  * route_id : UUID <<FK>>
  * user_id : UUID
  * created_at : TIMESTAMPTZ
  ..
  <<UNIQUE>> (route_id, user_id)
}

entity "route_ratings" as ratings {
  * **id** : UUID <<PK>>
  --
  * route_id : UUID <<FK>>
  * user_id : UUID
  * rating : SMALLINT [1..5]
  * created_at : TIMESTAMPTZ
  ..
  <<UNIQUE>> (route_id, user_id)
}

entity "bookmarks" as bookmarks {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * route_id : UUID <<FK>>
  * created_at : TIMESTAMPTZ
  ..
  <<UNIQUE>> (user_id, route_id)
}

entity "notifications" as notifications {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * type : TEXT [comment|like|rating]
  * route_id : UUID
  * actor_name : TEXT
    is_read : BOOL
  * created_at : TIMESTAMPTZ
}

entity "conversations" as conversations {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
    title : TEXT
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

entity "chat_messages" as chat_messages {
  * **id** : UUID <<PK>>
  --
  * conversation_id : UUID <<FK>>
  * role : TEXT [user|assistant]
  * content : TEXT
    actions : JSONB
  * created_at : TIMESTAMPTZ
}

users ||--o{ routes : "создаёт"
routes ||--o{ comments : "имеет"
routes ||--o{ likes : "получает"
routes ||--o{ ratings : "оценивается"
routes ||--o{ route_categories : "относится к"
categories ||--o{ route_categories : "включает"
users ||--o{ bookmarks : "сохраняет"
routes ||--o{ bookmarks : "добавляется в"
users ||--o{ notifications : "получает"
users ||--o{ conversations : "ведёт"
conversations ||--o{ chat_messages : "содержит"

@enduml
